fix: adjusted all p margin-bottom on mobile to 24px instead of 8

--- a/docs/.vuepress/theme/styles/global.scss
+++ b/docs/.vuepress/theme/styles/global.scss
@@ -155,7 +155,7 @@ body {
     }
     p {
       @include body-small();
-      margin-bottom: 8px;
+      margin-bottom: 24px;
     }
     ul {
       margin-bottom: 8px;
